Added style to index_recetas.html     mod index_recetas         added style without integration with receta1.html and receta2.html in content     mod TareaL-Bootstrap/styles.css         added classes to modify opacity of bs backgrounds     add TareaL-Bootstrap/Recetas/img/clock.svg         for using as icon     add TareaL-Bootstrap/Recetas/img/receta1.png         same as r1-mzZ.png for reference to receta1.html

--- a/TareaL-Bootstrap/styles.css
+++ b/TareaL-Bootstrap/styles.css
@@ -9,8 +9,8 @@
 
 /* Set black background color, white text and some padding */
 footer {
-  background-color: #00ff32;
-  color: #555;
+  background-color: rgba(var(--bs-success-rgb),1);
+  color: #ffff;
   padding: 10px;
 }
 
@@ -22,3 +22,13 @@ footer {
   }
   .row.content {height: auto;} 
 }
+
+/* Sets opacity of bootstrap default backgrounds to 50%*/
+.bg-opacity-50{
+  --bs-bg-opacity: .5;
+};
+
+/* Sets opacity of bootstrap default backgrounds to 25%*/
+.bg-opacity-25{
+  --bs-bg-opacity: .9;
+};
